Add task api call implemented
 - schema updated
 - OpenAPI definition added
 - DB queries now return id of inserted record
 - DB can have parameter values passed separately
 - Tests for task-add added
